bynkc/tests/fixtures/negative/478_or_pattern_duplicate_arm/input.bynk
commons demo

fn f(n: Int) -> String {
  match n {
    1 | 2 => "small"
    2 => "two"
    _ => "other"
  }
}
